# myndgera

./: .gitignore  Cargo.toml  README.md
examples/line_raster/: clear.comp.glsl  fill.comp  main.rs  postprocess.frag  postprocess.frag.glsl  raster.comp  raster.comp.glsl  resolve.comp  resolve.comp.glsl  resolve.frag  resolve.vert  shared.glsl  spawn.comp  spawn.comp.glsl
examples/toy/: main.rs  shader.comp  shader.frag  shader.vert
shaders/: camera.glsl  deeper.glsl  extensions.glsl  hashes.glsl  inner.glsl  math.glsl  prelude.glsl  screen_trig.vert  shader.comp  shader.frag  shader.vert  textures.glsl  trig.frag.glsl  trig.vert.glsl  utils.glsl
src/: camera.rs  device.rs  input.rs  instance.rs  lib.rs  main.rs  math.rs  pipeline_arena.rs  recorder.rs  render_context.rs  screenshot.rs  shader_compiler.rs  swapchain.rs  texture_arena.rs  utils.rs  view_target.rs  watcher.rs
src/default_shaders/: glsl.rs  mod.rs
src/passes/: mod.rs
src/passes/bloom/: bloom_downsample.comp.glsl  bloom_downsample_common.glsl  bloom_downsample_low.comp  bloom_downsample_low.comp.glsl  bloom_upsample.comp  bloom_upsample.comp.glsl  mod.rs
src/passes/taa/: mod.rs  reproject.comp.glsl  taa.comp.glsl
src/vulkan/: buffers.rs  device.rs  frame.rs  instance.rs  mod.rs  pipeline_arena.rs  staging.rs  surface.rs  swapchain.rs  texture_arena.rs  view_target.rs
